[metadata]
name = lineaSSP
version = 0.1.0
description = A Python module to use or retrieve information from the LIneA Solar System Portal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linea-it/lineaSSP
author = LIneA Team
author_email = helpdesk@linea.org.br
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
    sora-astro
    astropy
    cartopy
    tqdm
python_requires = >=3.8
test_suite = tests
package_dir =
    = src

[options.extras_require]
dev =
    pytest>=4.4.1
    twine>=4.0,<5.0

[options.packages.find]
where = src
