[metadata]
name = lineaSSP
version = 0.1.1
description = A Python module to use or retrieve information from the LIneA Solar System Portal.
long_description = file: README.md
long_description_content_type = text/markdown
author = LIneA Team
author_email = helpdesk@linea.org.br
url = https://github.com/linea-it/lineaSSP
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    sora-astro
    astropy
    cartopy
    tqdm

[options.extras_require]
dev =
    pytest>=4.4.1
    twine>=4.0,<5.0
